# yugioh-timeless

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  config.py  interface.py  latinski.py  pyproject.toml  requirements.txt  timeless.py  token.txt  turnir.py
src/timeless/: __init__.py  __main__.py  api.py  cli.py  config.py  duelist.py  entities.py  parser.py  record.py  round.py  square.py  standing.py  standings.py  timeless.py  tournament.py  utils.py
src/yugioh_timeless/: __init__.py  interface.py  timeless.py
tests/: test_duelist.py  test_tournament.py
yugioh-timeless/: __init__.py  config.py  interface.py  timeless.py
