

[build-system]
requires = ["setuptools >= 69.1"]
build-backend = "setuptools.build_meta"

[project]
name = "yugioh-timeless"
version = "0.0.1"
dependencies = [
    "colorama == 0.4.6",
    "numpy == 1.24.2",
    "tabulate == 0.9.0",
]
requires-python = ">= 3.11"

[project.scripts]
timeless = "yugioh_timeless:run_yugioh_timeless"
