
[build-system]
requires = ["setuptools >= 69.1"]
build-backend = "setuptools.build_meta"

[project]
name = "yugioh-timeless"
version = "0.1.0-beta"
license = "MIT"
dependencies = [
    "tabulate >= 0.9.0",
]
requires-python = ">= 3.13"

[project.scripts]
timeless = "yugioh_timeless:run_yugioh_timeless"
